<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>RoboPipe</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hshahzad2005108277@gmail.com">the_hassan_shahzad</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>pybullet</depend>
  <depend>pybullet_data</depend>
  <depend>time</depend>
  <depend>random</depend>
  <depend>cv2</depend>
  <depend>mediapipe</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
